--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Assets\Scripts\Managers\WallManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Resources\Data\.gitkeep" />
     <None Include="Assets\Resources\Data\Actors.json" />
     <None Include="Assets\Resources\Data\Stages.json" />
     <None Include="Assets\Resources\Data\Tutorials.json" />
@@ -1618,6 +1619,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
