--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -106,7 +106,6 @@
     <Compile Include="Assets\Scripts\Models\ActorPair.cs" />
     <Compile Include="Assets\Scripts\Actions\AttackAction.cs" />
     <Compile Include="Assets\Scripts\GUI\TutorialPopup.cs" />
-    <Compile Include="Assets\Scripts\Actions\TurnAction.cs" />
     <Compile Include="Assets\Scripts\Managers\EnemyManager.cs" />
     <Compile Include="Assets\Scripts\Managers\DebugManager.cs" />
     <Compile Include="Assets\Scripts\Managers\GhostManager.cs" />
@@ -169,6 +168,7 @@
     <Compile Include="Assets\Scripts\Instances\PortraitInstance.cs" />
     <Compile Include="Assets\Scripts\GUI\ScrollingBackground.cs" />
     <Compile Include="Assets\Scripts\Instances\WorldMapInstance.cs" />
+    <Compile Include="Assets\Scripts\Actions\PhaseAction.cs" />
     <Compile Include="Assets\Scripts\Managers\TooltipManager.cs" />
     <Compile Include="Assets\Scripts\Managers\BoardManager.cs" />
     <Compile Include="Assets\Scripts\Models\StageActor.cs" />
